--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ atpublic==4.0
 attrs==23.2.0
 Babel==2.14.0
 blinker==1.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.4.2
+elastic-transport==8.11.0
+elasticsearch==8.11.1
 email-validator==2.1.0.post1
 Flask==3.0.0
 flask-babel==4.0.0
@@ -27,8 +31,10 @@ packaging==23.2
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
+urllib3==2.1.0
 Werkzeug==3.0.1
 WTForms==3.1.2
